--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# contains every python library this project depends on
-# if add new packages, need to rebuild docker to install new packages
 flask==2.1.3
 flask-smorest
 python-dotenv
@@ -8,3 +6,8 @@ flask-sqlalchemy
 flask-jwt-extended
 passlib
 flask-migrate
+gunicorn
+psycopg2
+requests
+rq
+redis
